fdo#72398 add m4v to allowed movie exts

Change-Id: I3a0f4cdfc8b229efb65d3aae94de9e1cabd002ec
(cherry picked from commit 88a243a3bbfa2207d8c01fa6ee068b6aba810cdc)